# soprano

./: .gitignore  CHANGES_LOG.md  README.md  Soprano.bat  api_server.py  gradio_app.py  pyproject.toml  server.py  setup.bat  start_soprano.bat
CLI/: CLI_DOCUMENTATION.md  __init__.py  soprano_cli.py  start_cli.bat
examples/: streaming.ipynb
soprano/: __init__.py  cli.py  readme.md  server.py  soprano_cli.py  tts.py  webui.py
soprano/backends/: lmdeploy.py  transformers.py  vllm.py
soprano/server/: README.md  Run_API.bat  Run_WebSocket.bat  api.py  api_test.py  test_api.py  test_websocket.py  websocket.py
soprano/server/docs/: api_readme.md  architecture.md  configuration.md  endpoints.md  errors_and_troubleshooting.md  index.md  overview.md  test_readme.md  usage_examples.md  websocket_readme.md
soprano/utils/: auto_select.py  streaming.py  text.py  text_normalizer.py  text_splitter.py
soprano/vocos/: decoder.py
