[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soprano-tts"
version = "0.0.2"
authors = [
  { name="ekwek1", email="eugene.kwek.1@gmail.com" },
]
description = "Soprano: Instant, Ultra‑Realistic Text‑to‑Speech"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "unidecode",
  "inflect",
  "scipy",
  "transformers"
]
license = {file = "LICENSE"}

[project.optional-dependencies]
cuda = [
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "lmdeploy"
]
rocm = [
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "pytorch-triton-rocm"
]

[project.urls]
Homepage = "https://github.com/ekwek1/soprano"
Issues = "https://github.com/ekwek1/soprano/issues"

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", extra = "cuda" },
  { index = "pytorch-rocm", extra = "rocm" }
]
torchaudio = [
  { index = "pytorch-cuda", extra = "cuda" },
  { index = "pytorch-rocm", extra = "rocm" }
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", extra = "rocm" }
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv]
conflicts = [
  [
    { extra = "cuda" },
    { extra = "rocm" },
  ],
]